@@ -24,7 +24,6 @@ dependencies {
     testRuntimeOnly("org.slf4j:slf4j-api:2.0.13")
     testRuntimeOnly("org.slf4j:slf4j-jdk-platform-logging:2.0.13")
 
-
     // JDK23: JMH (Third-Party) Not required, added for benchmarking
     // https://github.com/openjdk/jmh
     testImplementation("org.openjdk.jmh:jmh-core:1.37")
@@ -90,12 +89,37 @@ publishing {
     }
 }
 
-tasks.withType<Test>().all {
-    // JDK22: Foreign Function Interface (FFI)
-    // Resolves Warning:
-    // WARNING: A restricted method in java.lang.foreign.SymbolLookup has been called
-    // WARNING: java.lang.foreign.SymbolLookup::libraryLookup has been called by org.xxdc.oss.example.GameBoardNativeImpl in an unnamed module
-    // WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
-    // WARNING: Restricted methods will be blocked in a future release unless native access is enabled
-    jvmArgs = listOf("--enable-native-access=ALL-UNNAMED", "-XX:+UseZGC")
+// TODO: Disable preview features on the branch when the next JDK is released
+val enablePreviewFeatures = true
+
+val collectorArgs = listOf(
+    "-XX:+UseZGC"
+)
+val standardArgs = listOf(
+    "--enable-native-access=ALL-UNNAMED",
+) + collectorArgs
+
+tasks.named<Test>("test") {
+    jvmArgs = if (enablePreviewFeatures) {
+        listOf("--enable-preview") + standardArgs
+    } else {
+        standardArgs
+    }
+}
+
+if (enablePreviewFeatures) {
+    tasks.withType<JavaCompile>().configureEach {
+        options.compilerArgs.addAll(listOf("--enable-preview"))
+    }
+    
+    tasks.withType<JavaExec>().configureEach {
+        jvmArgs("--enable-preview")
+    }
+    
+    tasks.withType<Javadoc>() {
+        (options as StandardJavadocDocletOptions).apply {
+            addBooleanOption("-enable-preview", true)    
+            source = "24"
+        }
+    }
 }
